[gd_scene load_steps=4 format=3 uid="uid://dp1np1pp7kkv4"]

[ext_resource type="PackedScene" uid="uid://bha3i0vfrpvx5" path="res://Graphic Elements/popups/my_popup_button.tscn" id="1_er0fc"]
[ext_resource type="Script" uid="uid://cxa85qyhbwi32" path="res://Graphic Elements/popups/encyclopedia.gd" id="2_ah5ry"]
[ext_resource type="Theme" uid="uid://c8cfcbe6ioxu5" path="res://Graphic Elements/Themes/subTab.tres" id="3_4fybr"]

[node name="Encyclopedia" instance=ExtResource("1_er0fc")]
script = ExtResource("2_ah5ry")

[node name="VBoxContainer" parent="Panel/CenterContainer/Window" index="0"]
theme_override_constants/separation = 8

[node name="Title" parent="Panel/CenterContainer/Window/VBoxContainer" index="0"]
text = "Encyclopedia"

[node name="Text" parent="Panel/CenterContainer/Window/VBoxContainer" index="1"]
visible = false

[node name="Keywords" type="Button" parent="Panel/CenterContainer/Window/VBoxContainer" index="2"]
layout_mode = 2
theme = ExtResource("3_4fybr")
theme_override_font_sizes/font_size = 20
text = " Keywords "

[node name="Beastiary" type="Button" parent="Panel/CenterContainer/Window/VBoxContainer" index="3"]
layout_mode = 2
theme = ExtResource("3_4fybr")
theme_override_font_sizes/font_size = 20
text = " Beastiary "

[node name="Equipment" type="Button" parent="Panel/CenterContainer/Window/VBoxContainer" index="4"]
layout_mode = 2
theme = ExtResource("3_4fybr")
theme_override_font_sizes/font_size = 20
text = " Equipment "

[node name="Tutorials" type="Button" parent="Panel/CenterContainer/Window/VBoxContainer" index="5"]
layout_mode = 2
theme = ExtResource("3_4fybr")
theme_override_font_sizes/font_size = 20
text = " Tutorials "

[node name="Button" parent="Panel/CenterContainer/Window/VBoxContainer/VBoxContainer" index="0"]
text = " Return "

[connection signal="pressed" from="Panel/CenterContainer/Window/VBoxContainer/Keywords" to="." method="_on_keywords_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/Window/VBoxContainer/Beastiary" to="." method="_on_beastiary_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/Window/VBoxContainer/Equipment" to="." method="_on_equipment_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/Window/VBoxContainer/Tutorials" to="." method="_on_tutorials_pressed"]
